@@ -56,6 +56,8 @@ C-API
 Library
 -------
 
+- Issue #3726: Allowed spaces in separators in logging configuration files.
+
 - Issue #3719: platform.architecture() fails if there are spaces in the
   path to the Python binary.
 
